feat(swagger): few fixes on malfunctioning services
